Focil master (#10727)